# dmp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz.rs
src/: diff.rs  fuzz.rs  lib.rs  patch.rs
