[package]
name = "dmp"
publish = true
edition = "2021"
version = "0.2.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "A high-performance library in that manipulates plain text"
homepage = "https://github.com/surrealdb/dmp"
repository = "https://github.com/surrealdb/dmp"
keywords = ["dmp", "diff", "diff-match-patch"]
categories = ["algorithms", "text-editors", "text-processing"]
license = "MIT"

[dependencies]
urlencoding = "2.1.3"
